--- a/src/Inceptum.AppServer/nlog.config
+++ b/src/Inceptum.AppServer/nlog.config
@@ -12,9 +12,14 @@
 	<variable name="logfolder" value="${gdc:item=logfolder}" />
 
 	<targets>
-     <target name="managementConsole" xsi:type="ManagementConsole" layout="${date:format=HH\:mm\:ss.fff} ${level} [${threadid}][${threadname}] [${app_domain:DefaultAppDomainAlias=server}.${logger:shortName=true}] ${message} ${exception:format=tostring}" />
+    <target name="managementConsole" xsi:type="ManagementConsole" layout="${date:format=HH\:mm\:ss.fff} ${level} [${threadid}][${threadname}] [${app_domain:DefaultAppDomainAlias=server}.${logger:shortName=true}] ${message} ${exception:format=tostring}" />
+	<target name="instanceLogs" xsi:type="AsyncWrapper">
+			<target name="console" xsi:type="Console" layout="${message}" />
+	</target>
 
-    <target name="asyncFileWriter" xsi:type="AsyncWrapper">
+
+
+		<target name="asyncFileWriter" xsi:type="AsyncWrapper">
 			<target name="logfile" xsi:type="File" autoFlush="true" encoding="utf-8" fileName="${logfolder}\${shortdate}.log" layout="${longdate} ${uppercase:inner=${pad:padCharacter= :padding=-5:inner=${level}}} [${threadid}][${threadname}] [${logger:shortName=true}] ${message} ${exception:format=tostring}" />
 		</target>
 
@@ -40,6 +45,8 @@
 	</targets>
 
 	<rules>
+		<logger name="*.LogCache" writeTo="instanceLogs" final="true" />
+
 		<!-- <logger name="NHibernate.SQL" minlevel="Debug" writeTo="asyncFileWriter" final="true" />-->
 		<logger name="NHibernate.*" writeTo="null" final="true" />
 		<logger name="*.ExchangeRatesMultiplier" writeTo="null" final="true" />
