--- a/src/Inceptum.AppServer/Inceptum.AppServer.csproj
+++ b/src/Inceptum.AppServer/Inceptum.AppServer.csproj
@@ -189,6 +189,7 @@
     </Compile>
     <Compile Include="AppDiscovery\Nuget\NugetApplicationBrowser.cs" />
     <Compile Include="AppServerSetup.cs" />
+    <Compile Include="Hosting\ApplicationHost2.cs" />
     <Compile Include="Hosting\JobObject.cs" />
     <Compile Include="Utils\AppDomainRenderer.cs" />
     <Compile Include="Bootstrap\LoggingInstaller.cs" />
@@ -208,14 +209,11 @@
     <Compile Include="Hosting\Host.cs" />
     <Compile Include="Bootstrap\Bootstrapper.cs" />
     <Compile Include="Hosting\ApplicationHost.cs" />
-    <Compile Include="Hosting\AppServerContext.cs" />
     <Compile Include="HbSender.cs" />
     <Compile Include="AppDiscovery\IApplicationBrowser.cs" />
     <Compile Include="Hosting\IApplicationHost.cs" />
-    <Compile Include="Logging\ILogCache.cs" />
     <Compile Include="Logging\LogCache.cs" />
     <Compile Include="Logging\LogConnection.cs" />
-    <Compile Include="Logging\LogEvent.cs" />
     <Compile Include="Logging\ManagementConsoleTarget.cs" />
     <Compile Include="Logging\SignalRhost.cs" />
     <Compile Include="Notification\UiNotificationHub.cs" />
@@ -299,7 +297,7 @@
   </Target>
 -->
   <Target Name="AfterBuild">
-    <CreateItem Include="$(OutDir)\*.dll;$(OutDir)\*.pdb;$(OutDir)\*.xml;" Exclude="$(OutDir)\AppServer.pdb;$(OutDir)\AppServer.xml">
+    <CreateItem Include="$(OutDir)\*.dll;$(OutDir)\*.pdb;$(OutDir)\*.xml;" Exclude="$(OutDir)\AppServer.pdb;$(OutDir)\AppServer.xml;$(OutDir)\Inceptum.AppServer.Sdk.dll;$(OutDir)\Inceptum.AppServer.Sdk.pdb">
       <Output TaskParameter="Include" ItemName="FilesToMove" />
     </CreateItem>
     <RemoveDir Directories="$(OutDir)\bin\" />
