Console logging for hosted app

--- a/src/Inceptum.AppServer.Initializer/Inceptum.AppServer.Initializer.csproj
+++ b/src/Inceptum.AppServer.Initializer/Inceptum.AppServer.Initializer.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Application.cs" />
     <Compile Include="IApplicationInstance.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WndUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Inceptum.AppServer.Sdk\Inceptum.AppServer.Sdk.csproj">
