--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Inceptum.AppServer.Configuration\packages.config" />
+  <repository path="..\Inceptum.AppServer.Initializer\packages.config" />
   <repository path="..\Inceptum.AppServer.Management\packages.config" />
   <repository path="..\Inceptum.AppServer.Sdk\packages.config" />
   <repository path="..\Inceptum.AppServer.Tests\packages.config" />
