--- a/src/Inceptum.AppServer.Initializer/Inceptum.AppServer.Initializer.csproj
+++ b/src/Inceptum.AppServer.Initializer/Inceptum.AppServer.Initializer.csproj
@@ -36,6 +36,25 @@
     <StartupObject>Inceptum.AppServer.Initializer.Application</StartupObject>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core, Version=3.2.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Castle.Core.3.2.0\lib\net40-client\Castle.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Castle.Facilities.Logging">
+      <HintPath>..\packages\Castle.LoggingFacility.3.2.0\lib\net40\Castle.Facilities.Logging.dll</HintPath>
+    </Reference>
+    <Reference Include="Castle.Services.Logging.NLogIntegration, Version=3.2.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Castle.Core-NLog.3.2.0\lib\net40\Castle.Services.Logging.NLogIntegration.dll</HintPath>
+    </Reference>
+    <Reference Include="Castle.Windsor, Version=3.2.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Castle.Windsor.3.2.1\lib\net40\Castle.Windsor.dll</HintPath>
+    </Reference>
+    <Reference Include="NLog, Version=2.0.1.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\NLog.2.0.1.2\lib\net40\NLog.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.ServiceModel" />
@@ -48,7 +67,12 @@
   <ItemGroup>
     <Compile Include="AppDomainInitializer.cs" />
     <Compile Include="Application.cs" />
+    <Compile Include="ApplicationHost.cs" />
+    <Compile Include="IApplicationHost.cs" />
     <Compile Include="IApplicationInstance.cs" />
+    <Compile Include="ILogCache.cs" />
+    <Compile Include="ManagementConsoleTarget.cs" />
+    <Compile Include="PluginInstallerFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WndUtils.cs" />
   </ItemGroup>
@@ -57,6 +81,10 @@
       <Project>{caff34b8-90cd-46d6-bce8-c7b275473346}</Project>
       <Name>Inceptum.AppServer.Sdk</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
