nlog.config injection to hosted app.

--- a/TestData/NugetTestApp/Inceptum.AppServer.TestApp/App.config
+++ b/TestData/NugetTestApp/Inceptum.AppServer.TestApp/App.config
@@ -2,5 +2,6 @@
 <configuration>
 	<appSettings>
 		<add key="appConfigSetting" value="test"/>
+		<add key="fail" value="true"/>
 	</appSettings>
 </configuration>
