on instance start files from config\ folder of nuget package are copied to insance folder with .default extention added to name and with original name ehrn such file does not exist

--- a/TestData/NugetTestApp/Inceptum.AppServer.TestApp/App.config
+++ b/TestData/NugetTestApp/Inceptum.AppServer.TestApp/App.config
@@ -2,6 +2,6 @@
 <configuration>
 	<appSettings>
 		<add key="appConfigSetting" value="test"/>
-		<add key="fail" value="true"/>
+		<add key="fail" value="false"/>
 	</appSettings>
 </configuration>
