--- a/TestData/NugetTestApp/Inceptum.AppServer.TestApp/App.config
+++ b/TestData/NugetTestApp/Inceptum.AppServer.TestApp/App.config
@@ -3,5 +3,6 @@
 	<appSettings>
 		<add key="appConfigSetting" value="test"/>
 		<add key="fail" value="false"/>
+		<add key="hangOnStart" value="false"/>
 	</appSettings>
 </configuration>
