--- a/src/Inceptum.AppServer.Tests/packages.config
+++ b/src/Inceptum.AppServer.Tests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="3.2.0" targetFramework="net40" />
+  <package id="Castle.LoggingFacility" version="3.2.0" targetFramework="net40" />
   <package id="Castle.Windsor" version="3.2.1" targetFramework="net40" />
   <package id="Inceptum.DataBus" version="1.0.5.96" targetFramework="net40" />
   <package id="Inceptum.Messaging" version="1.0.5.96" targetFramework="net40" />
