colored console logging

--- a/src/Inceptum.AppServer/nlog.config
+++ b/src/Inceptum.AppServer/nlog.config
@@ -1,20 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" autoReload="true">
-<!--
-  <extensions>
-    <add assembly="Inceptum.AppServer.Sdk"/>
-  </extensions>
--->
-<!--
-	<variable name="logfolder" value="${basedir}\logs\${app_domain:DefaultAppDomainAlias=server}\" />
--->
 	<variable name="logfolder" value="${gdc:item=logfolder}" />
 
 	<targets>
-    <target name="managementConsole" xsi:type="ManagementConsole" layout="${date:format=HH\:mm\:ss.fff} ${level} [${threadid}][${threadname}] [${app_domain:DefaultAppDomainAlias=server}.${logger:shortName=true}] ${message} ${exception:format=tostring}" />
+    <target name="managementConsole" xsi:type="ManagementConsole" layout="${date:format=HH\:mm\:ss.fff} ${level} [${threadid}][${threadname}] [${logger:shortName=true}] ${message} ${exception:format=tostring}" />
 	<target name="instanceLogs" xsi:type="AsyncWrapper">
-			<target name="console" xsi:type="Console" layout="${message}" />
+		<target name="console" xsi:type="ColoredConsole" layout="${message}"
+				useDefaultRowHighlightingRules="false">
+			<highlight-row condition="level == LogLevel.Debug" foregroundColor="DarkGray" />
+			<highlight-row condition="level == LogLevel.Info" foregroundColor="White" />
+			<highlight-row condition="level == LogLevel.Warn" foregroundColor="Yellow" />
+			<highlight-row condition="level == LogLevel.Error" foregroundColor="Red" />
+			<highlight-row condition="level == LogLevel.Fatal" foregroundColor="Red" backgroundColor="White" />
+			<highlight-word foregroundColor="Blue" regex="^.*?:" />
+		</target>
 	</target>
 
 
@@ -32,13 +32,19 @@
 		<target name="asyncDiasoftFileWriter" xsi:type="AsyncWrapper">
 			<target name="logfile" xsi:type="File" autoFlush="true" encoding="utf-8" fileName="${logfolder}\${shortdate}.diasoft.log" layout="${longdate} ${uppercase:inner=${pad:padCharacter= :padding=-5:inner=${level}}} [${threadid}][${threadname}] [${logger:shortName=true}] ${message} ${exception:format=tostring}" />
 		</target>
-		<target name="asyncConsole" xsi:type="AsyncWrapper">
-			<target name="console" xsi:type="Console" layout="${date:format=HH\:mm\:ss.fff} ${level} [${threadid}][${threadname}] [${app_domain:DefaultAppDomainAlias=server}.${logger:shortName=true}] ${message} ${exception:format=tostring}" />
+    	<target name="asyncConsole" xsi:type="AsyncWrapper">
+			<target name="console" xsi:type="ColoredConsole" layout="${date:format=HH\:mm\:ss.fff} ${level} [${threadid}][${threadname}] [${logger:shortName=true}] ${message} ${exception:format=tostring}"
+					useDefaultRowHighlightingRules="false">
+				<highlight-row condition="level == LogLevel.Debug" foregroundColor="DarkGray" />
+				<highlight-row condition="level == LogLevel.Info" foregroundColor="White" />
+				<highlight-row condition="level == LogLevel.Warn" foregroundColor="Yellow" />
+				<highlight-row condition="level == LogLevel.Error" foregroundColor="Red" />
+				<highlight-row condition="level == LogLevel.Fatal" foregroundColor="Red" backgroundColor="White" />
+			</target>
 		</target>
     
-
 		<target name="asyncDebug" xsi:type="AsyncWrapper">
-			<target name="debug" xsi:type="Debug" layout="${date:format=HH\:mm\:ss.fff} ${level} [${threadid}][${threadname}] [${app_domain:DefaultAppDomainAlias=server}.${logger:shortName=true}] ${message} ${exception:format=tostring}" />
+			<target name="debug" xsi:type="Debug" layout="${date:format=HH\:mm\:ss.fff} ${level} [${threadid}][${threadname}] [${logger:shortName=true}] ${message} ${exception:format=tostring}" />
 		</target>
 
 		<target name="null" xsi:type="Null" />
