--- a/TestData/NugetTestApp/Inceptum.AppServer.TestApp/Inceptum.AppServer.TestApp.nuspec
+++ b/TestData/NugetTestApp/Inceptum.AppServer.TestApp/Inceptum.AppServer.TestApp.nuspec
@@ -4,7 +4,7 @@
     <id>TestApp</id>
     <version>$version$</version>
     <title>TestApp</title>
-    <authors>Unknown1</authors>
+    <authors>Unknown</authors>
     <owners>Unknown2</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>TestApp</description>
