--- a/src/Inceptum.AppServer/nlog.config
+++ b/src/Inceptum.AppServer/nlog.config
@@ -15,7 +15,7 @@
 				<target xsi:type="FilteringWrapper" name="instancesFilter"
 				        condition="logger!='Inceptum.AppServer.Logging.LogCache'">
 					<target name="server" xsi:type="ColoredConsole"
-					        layout="${date:format=HH\:mm\:ss.fff} ${level} [${threadid}][${threadname}] [${logger:shortName=true}] ${message} ${exception:format=tostring}"
+					        layout="${date:format=HH\:mm\:ss.fff} ${uppercase:inner=${pad:padCharacter= :padding=-5:inner=${level}}} [${threadid}][${threadname}] [${logger:shortName=true}] ${message} ${exception:format=tostring}"
 					        useDefaultRowHighlightingRules="false">
 						<highlight-row condition="level == LogLevel.Debug" foregroundColor="DarkGray" />
 						<highlight-row condition="level == LogLevel.Info" foregroundColor="White" />
