--- a/src/Inceptum.AppServer/nlog.config
+++ b/src/Inceptum.AppServer/nlog.config
@@ -6,7 +6,8 @@
 		<target name="managementConsole" xsi:type="ManagementConsole"
 		        layout="${date:format=HH\:mm\:ss.fff} ${level} [${threadid}][${threadname}] [${logger:shortName=true}] ${message} ${exception:format=tostring}" />
 		<target name="asyncFileWriter" xsi:type="AsyncWrapper">
-			<target name="logfile" xsi:type="File" autoFlush="true" encoding="utf-8" fileName="${logfolder}\${shortdate}.log"
+			
+    <target name="logfile" xsi:type="File" autoFlush="true" encoding="utf-8" fileName="${logfolder}\${shortdate}.log"
 			        layout="${longdate} ${uppercase:inner=${pad:padCharacter= :padding=-5:inner=${level}}} [${threadid}][${threadname}] [${logger:shortName=true}] ${message} ${exception:format=tostring}" />
 		</target>
 
@@ -48,7 +49,11 @@
 	</targets>
 
 	<rules>
-		<logger name="*" minlevel="Debug" writeTo="asyncFileWriter" />
+    <logger name="*" minlevel="Debug" writeTo="asyncFileWriter">
+      <filters>
+        <when condition="logger=='Inceptum.AppServer.Logging.LogCache'" action="Ignore" />
+      </filters>
+    </logger>
 		<logger name="*" minlevel="Debug" writeTo="asyncConsole" />
 		<logger name="*" minlevel="Trace" writeTo="asyncDebug" />
 		<logger name="*" minlevel="Trace" writeTo="managementConsole" />
