--- a/src/Inceptum.AppServer.Tests/packages.config
+++ b/src/Inceptum.AppServer.Tests/packages.config
@@ -4,9 +4,10 @@
   <package id="Castle.LoggingFacility" version="3.2.0" targetFramework="net40" />
   <package id="Castle.Windsor" version="3.2.1" targetFramework="net40" />
   <package id="Inceptum.Messaging" version="1.0.5.113" targetFramework="net40" />
+  <package id="Microsoft.Web.Xdt" version="1.0.0" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net40" />
   <package id="NLog" version="2.0.1.2" targetFramework="net40" />
-  <package id="NuGet.Core" version="2.2.0" targetFramework="net40" />
+  <package id="Nuget.Core" version="2.7.1" targetFramework="net40" />
   <package id="NUnit" version="2.6.2" targetFramework="net40" />
   <package id="protobuf-net" version="2.0.0.640" targetFramework="net40" />
   <package id="RhinoMocks" version="3.6.1" targetFramework="net40" />
