--- a/src/Inceptum.AppServer/packages.config
+++ b/src/Inceptum.AppServer/packages.config
@@ -8,10 +8,11 @@
   <package id="Microsoft.AspNet.SignalR.Owin" version="1.1.2" targetFramework="net40" />
   <package id="Microsoft.Owin.Host.HttpListener" version="0.21.0-pre" targetFramework="net40" />
   <package id="Microsoft.Owin.Hosting" version="0.21.0-pre" targetFramework="net40" />
+  <package id="Microsoft.Web.Xdt" version="1.0.0" targetFramework="net40" />
   <package id="Mono.Cecil" version="0.9.5.4" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net40" />
   <package id="NLog" version="2.0.1.2" targetFramework="net40" />
-  <package id="Nuget.Core" version="2.2.0" targetFramework="net40" />
+  <package id="NuGet.Core" version="2.7.1" targetFramework="net40" />
   <package id="Owin" version="1.0" targetFramework="net40" />
   <package id="Rx-Core" version="2.1.30214.0" targetFramework="net40" />
   <package id="Rx-Interfaces" version="2.1.30214.0" targetFramework="net40" />
