--- a/src/Inceptum.AppServer/app.config
+++ b/src/Inceptum.AppServer/app.config
@@ -5,13 +5,15 @@
   </startup>
   <appSettings>
     <add key="Environment" value="dev" />
-    <!--<add key="confSvcUrl" value="http://msa-ibdev1.office.finam.ru:8282/configurations"/>-->
+    <!--<add key="confSvcUrl" value=""/>-->
   </appSettings>
   <!--We need it for WebServices behind proxy to be accessed -->
   <system.net>
+<!--
     <defaultProxy useDefaultCredentials="true">
       <proxy autoDetect="True" bypassonlocal="True" />
     </defaultProxy>
+-->
   </system.net>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
