--- a/src/Inceptum.AppServer/app.config
+++ b/src/Inceptum.AppServer/app.config
@@ -3,4 +3,9 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
   </startup>
+  <system.net>
+    <defaultProxy enabled="false">
+      <proxy/>
+    </defaultProxy>
+  </system.net>
 </configuration>
