--- a/src/Inceptum.AppServer/nlog.config
+++ b/src/Inceptum.AppServer/nlog.config
@@ -13,8 +13,7 @@
 
 		<target name="asyncConsole" xsi:type="AsyncWrapper">
 			<target name="consoleLogging" xsi:type="SplitGroup">
-				<target xsi:type="FilteringWrapper" name="instancesFilter"
-				        condition="logger!='Inceptum.AppServer.Logging.LogCache'">
+				<target xsi:type="FilteringWrapper" name="instancesFilter" condition="logger!='Inceptum.AppServer.Logging.LogCache'">
 					<target name="server" xsi:type="ColoredConsole"
 					        layout="${date:format=HH\:mm\:ss.fff} ${uppercase:inner=${pad:padCharacter= :padding=-5:inner=${level}}} [${threadid}][${threadname}] [${logger:shortName=true}] ${message} ${exception:format=tostring}"
 					        useDefaultRowHighlightingRules="false">
@@ -25,8 +24,7 @@
 						<highlight-row condition="level == LogLevel.Fatal" foregroundColor="Red" backgroundColor="White" />
 					</target>
 				</target>
-				<target xsi:type="FilteringWrapper" name="instancesFilter"
-				        condition="logger=='Inceptum.AppServer.Logging.LogCache'">
+				<target xsi:type="FilteringWrapper" name="instancesFilter" condition="logger=='Inceptum.AppServer.Logging.LogCache'">
 					<target name="instances" xsi:type="ColoredConsole" layout="${message}"
 					        useDefaultRowHighlightingRules="false">
 						<highlight-row condition="level == LogLevel.Debug" foregroundColor="DarkGray" />
@@ -56,7 +54,11 @@
     </logger>
 		<logger name="*" minlevel="Debug" writeTo="asyncConsole" />
 		<logger name="*" minlevel="Trace" writeTo="asyncDebug" />
-		<logger name="*" minlevel="Trace" writeTo="managementConsole" />
+    <logger name="*" minlevel="Trace" writeTo="managementConsole" >
+      <filters>
+        <when condition="logger=='Inceptum.AppServer.Logging.LogCache'" action="Ignore" />
+      </filters>
+    </logger>
 	</rules>
 
 </nlog>
