fixed bug where vendor name was ignored while looking for instance pplication params at startup

--- a/TestData/NugetTestApp/Inceptum.AppServer.TestApp/Inceptum.AppServer.TestApp.nuspec
+++ b/TestData/NugetTestApp/Inceptum.AppServer.TestApp/Inceptum.AppServer.TestApp.nuspec
@@ -4,8 +4,8 @@
     <id>TestApp</id>
     <version>$version$</version>
     <title>TestApp</title>
-    <authors>Unknown</authors>
-    <owners>Unknown2</owners>
+    <authors>Test</authors>
+    <owners>Test</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>TestApp</description>
     <releaseNotes></releaseNotes>
