remvoved depemdency on messaging from sdk

--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -3,6 +3,7 @@
   <repository path="..\Inceptum.AppServer.Configuration\packages.config" />
   <repository path="..\Inceptum.AppServer.Initializer\packages.config" />
   <repository path="..\Inceptum.AppServer.Management\packages.config" />
+  <repository path="..\Inceptum.AppServer.MessagingExtension\packages.config" />
   <repository path="..\Inceptum.AppServer.Sdk\packages.config" />
   <repository path="..\Inceptum.AppServer.Tests\packages.config" />
   <repository path="..\Inceptum.AppServer\packages.config" />
