--- a/src/Inceptum.AppServer.MessagingExtension/Inceptum.AppServer.Sdk.Messaging.csproj
+++ b/src/Inceptum.AppServer.MessagingExtension/Inceptum.AppServer.Sdk.Messaging.csproj
@@ -38,6 +38,10 @@
     <Reference Include="Castle.Windsor">
       <HintPath>..\packages\Castle.Windsor.3.2.1\lib\net45\Castle.Windsor.dll</HintPath>
     </Reference>
+    <Reference Include="Inceptum.Messaging, Version=1.0.6.7, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Inceptum.Messaging.1.0.6.7\lib\net40\Inceptum.Messaging.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.5.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
