--- a/src/Inceptum.AppServer.Sdk.Messaging/Inceptum.AppServer.Sdk.Messaging.nuspec
+++ b/src/Inceptum.AppServer.Sdk.Messaging/Inceptum.AppServer.Sdk.Messaging.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>Inceptum.AppServer.Sdk.Messaging</id>
     <version>$version$</version>
-    <title>Inceptum.Messaging.RabbitMq</title>
+    <title>Inceptum.AppServer.Sdk.Messaging</title>
     <authors>InceptumSoft</authors>
     <owners>InceptumSoft</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
