--- a/src/Inceptum.AppServer.AppHost/Inceptum.AppServer.AppHost.csproj
+++ b/src/Inceptum.AppServer.AppHost/Inceptum.AppServer.AppHost.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{D9E93ACD-AE23-423D-A48A-81A7AA2DDC0A}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Inceptum.AppServer.Initializer</RootNamespace>
-    <AssemblyName>Inceptum.AppServer.Initializer</AssemblyName>
+    <RootNamespace>Inceptum.AppServer.AppHost</RootNamespace>
+    <AssemblyName>AppHost</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Inceptum.AppServer.Initializer.Program</StartupObject>
+    <StartupObject>Inceptum.AppServer.AppHost.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Castle.Core, Version=3.2.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
