--- a/src/Inceptum.AppServer.Sdk.Messaging/packages.config
+++ b/src/Inceptum.AppServer.Sdk.Messaging/packages.config
@@ -2,12 +2,14 @@
 <packages>
   <package id="Castle.Core" version="3.2.2" targetFramework="net45" />
   <package id="Castle.Windsor" version="3.2.1" targetFramework="net45" />
-  <package id="Inceptum.Messaging" version="1.0.6.8" targetFramework="net45" />
+  <package id="Inceptum.Messaging" version="1.0.6.12" targetFramework="net45" />
+  <package id="Inceptum.Messaging.Castle" version="1.0.6.12" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
+  <package id="NLog" version="2.1.0" targetFramework="net45" />
   <package id="protobuf-net" version="2.0.0.668" targetFramework="net45" />
-  <package id="Rx-Core" version="2.1.30214.0" targetFramework="net45" />
-  <package id="Rx-Interfaces" version="2.1.30214.0" targetFramework="net45" />
-  <package id="Rx-Linq" version="2.1.30214.0" targetFramework="net45" />
-  <package id="Rx-Main" version="2.1.30214.0" targetFramework="net45" />
-  <package id="Rx-PlatformServices" version="2.1.30214.0" targetFramework="net45" />
+  <package id="Rx-Core" version="2.2.2" targetFramework="net45" />
+  <package id="Rx-Interfaces" version="2.2.2" targetFramework="net45" />
+  <package id="Rx-Linq" version="2.2.2" targetFramework="net45" />
+  <package id="Rx-Main" version="2.2.2" targetFramework="net45" />
+  <package id="Rx-PlatformServices" version="2.2.2" targetFramework="net45" />
 </packages>
