--- a/src/Inceptum.AppServer.Tests/Inceptum.AppServer.Tests.csproj
+++ b/src/Inceptum.AppServer.Tests/Inceptum.AppServer.Tests.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Configuration\ResourceConfigurationProviderBaseTests.cs" />
     <Compile Include="Investigation.cs" />
     <Compile Include="NugetApplicationBrowserTests.cs" />
+    <Compile Include="NuGet\ApplicationProjectManagerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
