--- a/src/Inceptum.AppServer/Inceptum.AppServer.csproj
+++ b/src/Inceptum.AppServer/Inceptum.AppServer.csproj
@@ -186,6 +186,8 @@
     <Compile Include="AppDiscovery\Nuget\PackageWrapper.cs" />
     <Compile Include="AppServerSetup.cs" />
     <Compile Include="Hosting\JobObject.cs" />
+    <Compile Include="NuGetAppInstaller\ApplicationProjectManager.cs" />
+    <Compile Include="NuGetAppInstaller\ApplicationProjectSystem.cs" />
     <Compile Include="Utils\AppDomainRenderer.cs" />
     <Compile Include="Bootstrap\LoggingInstaller.cs" />
     <Compile Include="Hosting\ApplicationInstance.cs" />
